// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radios > should render correctly with a padding 1`] = `
<div
  className="govuk-form-group"
>
  <fieldset
    className="govuk-fieldset"
    id="field-1"
  >
    <legend
      className="govuk-fieldset__legend govuk-!-padding-top-2"
    >
      <span
        className="govuk-heading-s govuk-!-margin-bottom-0"
      >
        Type of disruption
      </span>
    </legend>
    <div
      className=""
    >
      <div
        className="govuk-radios"
      >
        <div
          className="govuk-radios__item govuk-!-margin-bottom-1"
        >
          <input
            className="govuk-radios__input"
            defaultChecked={false}
            id="field-1-planned"
            name="field1"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="planned"
          />
          <label
            className="govuk-label govuk-radios__label"
            htmlFor="field-1-planned"
          >
            Planned
          </label>
        </div>
        <div
          className="govuk-radios__item"
        >
          <input
            className="govuk-radios__input"
            defaultChecked={false}
            id="field-1-unplanned"
            name="field1"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="unplanned"
          />
          <label
            className="govuk-label govuk-radios__label"
            htmlFor="field-1-unplanned"
          >
            Unplanned
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Radios > should render correctly with errors 1`] = `
<div
  className="govuk-form-group govuk-form-group--error"
>
  <fieldset
    className="govuk-fieldset"
    id="field-1"
  >
    <legend
      className="govuk-fieldset__legend"
    >
      <span
        className="govuk-heading-s govuk-!-margin-bottom-0"
      >
        Type of disruption
      </span>
    </legend>
    <div
      className=""
    >
      <span
        className="govuk-error-message"
        id="field1-error"
      >
        <span
          className="govuk-visually-hidden"
        >
          Error: 
        </span>
        There was an error
      </span>
      <div
        aria-describedby="field1-error"
        className="govuk-radios govuk-radios--error"
      >
        <div
          className="govuk-radios__item govuk-!-margin-bottom-1"
        >
          <input
            className="govuk-radios__input"
            defaultChecked={false}
            id="field-1-planned"
            name="field1"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="planned"
          />
          <label
            className="govuk-label govuk-radios__label"
            htmlFor="field-1-planned"
          >
            Planned
          </label>
        </div>
        <div
          className="govuk-radios__item"
        >
          <input
            className="govuk-radios__input"
            defaultChecked={false}
            id="field-1-unplanned"
            name="field1"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="unplanned"
          />
          <label
            className="govuk-label govuk-radios__label"
            htmlFor="field-1-unplanned"
          >
            Unplanned
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Radios > should render correctly with no errors 1`] = `
<div
  className="govuk-form-group"
>
  <fieldset
    className="govuk-fieldset"
    id="field-1"
  >
    <legend
      className="govuk-fieldset__legend"
    >
      <span
        className="govuk-heading-s govuk-!-margin-bottom-0"
      >
        Type of disruption
      </span>
    </legend>
    <div
      className=""
    >
      <div
        className="govuk-radios"
      >
        <div
          className="govuk-radios__item govuk-!-margin-bottom-1"
        >
          <input
            className="govuk-radios__input"
            defaultChecked={false}
            id="field-1-planned"
            name="field1"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="planned"
          />
          <label
            className="govuk-label govuk-radios__label"
            htmlFor="field-1-planned"
          >
            Planned
          </label>
        </div>
        <div
          className="govuk-radios__item"
        >
          <input
            className="govuk-radios__input"
            defaultChecked={false}
            id="field-1-unplanned"
            name="field1"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="unplanned"
          />
          <label
            className="govuk-label govuk-radios__label"
            htmlFor="field-1-unplanned"
          >
            Unplanned
          </label>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
